--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Polpharma - czempion polskiej gospodarki
             </div>
         </div>
     </nav>
-    <div class="page-header header-filter" data-parallax="true" style=" background-image: url('./assets/img/slider.JPG'); ">
+    <div class="page-header header-filter" data-parallax="true" style=" background-image: url('./assets/img/slider.jpg'); ">
         <div class="container">
             <!-- <div class="row"> -->
                 <!-- <div class="col-md-6"> -->
