--- a/assets/charts/generics_map.html
+++ b/assets/charts/generics_map.html
@@ -10,7 +10,7 @@
 		<!-- github.io and json-stat.org ARE NOT CDNs -->
 		<link href="https://idescat.github.io/visual/visual.css" rel="stylesheet" type="text/css" />
 		<script src="https://json-stat.org/lib/json-stat.js"></script>
-		<script src="https://idescat.github.io/visual/lazyvisualsetup.js"></script>
+		<script src="../js/lasyvisual.js"></script>
 		<!-- /DO NOT DO THIS IN PRODUCTION -->
 	</head>
 
