--- a/assets/charts/r_d_v2.html
+++ b/assets/charts/r_d_v2.html
@@ -63,7 +63,7 @@
  120.3,
  2.3,
  165.1],
-  mode: 'markers+text',
+  mode: 'markers',
   marker: {
     color: ['#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#c2509a','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5'],
 
