--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ Polpharma - czempion polskiej gospodarki
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-deferred"></script>
     <link href="https://idescat.github.io/visual/visual.css" rel="stylesheet" type="text/css" />
 		<script src="https://json-stat.org/lib/json-stat.js"></script>
-		<script src="https://idescat.github.io/visual/lazyvisualsetup.js"></script>
-
+		<script src="../assets/js/lazyvisual.js"></script>
 </head>
 
 <body class="landing-page ">
@@ -1137,7 +1136,7 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
           <p align="justify"></br>
           Grupa Polpharma stale rozwija swoje portfolio leków generycznych. Szczególnie istotne są tutaj ulepszenia znanych już substancji, które w ostatnich dwóch dekadach uzyskało potwierdzenie w X patentach (<i>TBD</i>).
 </p>
-          <h3>Patenty przyznane Polpharmie w latach 1999-2015</h3>
+          <h3>Aktywne patenty Grupy Polpharma na substancje czynne w latach 1999-2016</h3>
 </div>
 </div>
           <div class="chart-container" style="position: relative; height:60vh; width:60vw">
@@ -1155,10 +1154,10 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
           new Chart(document.getElementById("line-chart1"), {
             type: 'line',
             data: {
-              labels: [1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015
+              labels: [1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016
               ],
               datasets: [{
-                  data: [1,1,3,3,3,4,4,5,6,8,9,9,11,12,13,20,14],
+                  data: [1,1,3,3,3,4,4,5,6,8,9,9,11,12,13,14,14,14],
                   label: "Patenty przyznane Polpharmie",
                   backgroundColor: 'rgba(2, 69, 148,.7)',
                   borderColor: "rgb(2, 69, 148)",
@@ -1174,6 +1173,13 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
               ]
             },
             options: {
+                                  scales: {
+              yAxes: [{
+       ticks: {
+           min: 0,
+           max: 16
+         }
+   }]},
               legend: {
                   display: false
                 },
