--- a/assets/charts/r_d.html
+++ b/assets/charts/r_d.html
@@ -63,9 +63,9 @@
  120.3,
  2.3,
  165.1],
-  mode: 'markers+text',
+  mode: 'markers',
   marker: {
-    color: ['#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#c2509a','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5','#94bde5'],
+    color: ['#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#c2509a','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4','#B3B9C4'],
 
     size: [15.021307289711617,
  20.159521552568222,
@@ -102,7 +102,7 @@
  'Hiszpania',
  'Estonia',
  'Finlandia',
- 'Wielka Brytania',
+ '',
  'Węgry',
  'Islandia',
  'Izrael',
