--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                             </a>
                             <a href="#generics" class="dropdown-item">
                               <div class="icon icon-info">
-                                  <img src='./assets/icons/leki_small.png'> Rozwój portfolio leków generycznych
+                                  <img src='./assets/icons/kola_small.png'> Rozwój portfolio leków generycznych
                                  </div>
                             </a>
                             <a href="#industry4" class="dropdown-item">
                               <div class="icon icon-info">
-                                  <img src='./assets/icons/poland.png'> Bezpieczeństwo lekowe
+                                  <img src='./assets/icons/leki_small.png'> Bezpieczeństwo lekowe
                                  </div>
                             </a>
                             <a href="#hc" class="dropdown-item">
@@ -136,7 +136,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
 
 </h4>
 <a target="_blank" href="http://www.delab.uw.edu.pl">
-<img src='./assets/img/delabuw.png'></a>
+<img src='./assets/img/delabuw.png' width="250",height="150"></a>
                     </div>
                 </div>
               </div>
@@ -192,7 +192,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
 
                                 <div class="icon icon-danger">
                                   <!-- <img src='./assets/img/generic.png'> -->
-                                  <img src='./assets/icons/leki.png'>
+                                  <img src='./assets/icons/kola.png'>
 
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
@@ -206,7 +206,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
 
                                 <div class="icon icon-danger">
                                   <!-- <img src='./assets/img/ind.png'> -->
-                                  <img src='./assets/icons/poland.png'>
+                                  <img src='./assets/icons/leki.png', width="100",height="100">
 
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
@@ -1377,7 +1377,7 @@ new Chart(document.getElementById("polar-chart"), {
         <div class="section text-center">
           <div class="icon icon-info">
               <!-- <img src='./assets/img/ind.png'> -->
-              <img src='./assets/icons/poland.png'>
+              <img src='./assets/icons/leki.png'>
             </div>
             <h1 class='title'>Bezpieczeństwo lekowe<hr></h1>
 
