--- a/index.html
+++ b/index.html
@@ -1315,8 +1315,8 @@ new Chart(document.getElementById("polar-chart"), {
       datasets: [
         {
           label: "",
-          backgroundColor: ["rgba(222, 233, 252,.5)", "rgb(99, 149, 242)","rgb(18, 88, 220)","rgb(10, 51, 127)","rgb(9, 24, 52)","rgba(11, 30, 65,.5)"],
-          data: [10.2,10.3,14,14.6,16.8,31.8]
+          backgroundColor: ["rgb(222, 233, 252,.5)", "rgb(99, 149, 242)","rgb(18, 88, 220)","rgb(10, 51, 127)","rgb(9, 24, 52)","rgba(11, 30, 65,.5)"],
+          data: ['10.2','10.3','14','14.6','16.8','31.8']
         }
       ]
     },
