--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
                                 <h4 class="info-title">Rozwój portfolio leków generycznych</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p></a>
+                                <p>Wbrew powszechnej opinii leki generyczne mogą być produkowane w innowacyjny sposób, z wykorzystaniem nowatorskich technologii w nowoczesnych zakładach produkcyjnych.</p></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -211,7 +211,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
                                 <h4 class="info-title">Bezpieczeństwo lekowe</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p></a>
+                                <p>W kontekście nadchodzących zmian demograficznych związanych ze starzeniem się społeczeństwa coraz większego znaczenia nabiera bezpieczeństwo lekowe kraju.</p></a>
                             </div>
                         </div>
 
@@ -226,7 +226,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
                                 <h4 class="info-title">Inwestycje w kapitał ludzki</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p></a>
+                                <p>Stabilny poziom zatrudnienia i lepsze jakościowo miejsca pracy to cele Strategii na Rzecz Odpowiedzialnego Rozwoju. </p></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -240,7 +240,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
                                 <h4 class="info-title">Polpharma na rynkach globalnych</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p></a>
+                                <p>Dynamika rozwoju rynku leków równoważnych za granicą ma kluczowe znaczenie dla rynku farmaceutycznego. Globalny trend wzrostu handlu tymi lekami tworzy możliwości ekspansji przed polskimi producentami. </p></a>
                             </div>
                         </div>
                     </div>
@@ -714,7 +714,6 @@ Kolejną pułapką jest niewłaściwe rozumienie innowacyjności w procesie wytw
 
                           </div>
                           <h1 class='title'>Mariaż z biotechnologią<hr></h1>
-Produkcja leków biopodobnych, na którą stawia Polpharma, wymaga wysokiego zaawansowania technologicznego oraz dużych nakładów finansowych i organizacyjnych.
 
                             </div>
                           </div>
@@ -723,8 +722,11 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, wymaga wysokiego zaa
 
 
                 <div class="container">
-                    <div class="section text-center">
-                        <div class="row">
+                    <!-- <div class="section text-center"> -->
+                        <!-- <div class="row"> -->
+                        </br></br>
+                <p class='blockquote' text-align="justify">             Produkcja leków biopodobnych, na którą stawia Polpharma, wymaga wysokiego zaawansowania technologicznego oraz dużych nakładów finansowych i organizacyjnych. </p>
+</br></br>
                           <h3>Nowy kierunek innowacji: leki biologiczne</h3>
 
                           <p align="justify">
@@ -733,14 +735,14 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
 
 
                           <h3>Wydatki Polpharmy na B&R związane z biotechnologią w mln zł</h3>
-</div>
-</div>
+<!-- </div> -->
+<!-- </div> -->
 <div class="container">
 <div class="row">
 <div class="ml-auto mr-auto">
 
 
-<div class="chart-container" style="position: relative; height:50vh; width:40vw">
+<div class="chart-container" style="position: relative; height:60vh; width:60vw">
                             <canvas id="line-chart0"></canvas>
 </div>
 </div>
@@ -784,7 +786,7 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
                             </script>
 
                             <div id="nav-tabs">
-                                      <!-- <div class="col-md-6"> -->
+                                      <div class="col-md-6">
 
                                           <div class="card card-nav-tabs">
                                               <div class="card-header card-header-default">
@@ -809,7 +811,7 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
                                               <div class="card-body ">
                                                   <div class="tab-content">
                                                       <div class="tab-pane active" id="info4">
-                                                          <h5>&#9758; Inwestycje Polpharmy związane z badaniami i rozwojem w obszarze biotechnologii przekroczyły wartość 200 mln zł w 2016 r.. </br></br>
+                                                          <h5>&#9758; Inwestycje Polpharmy związane z badaniami i rozwojem w obszarze biotechnologii przekroczyły wartość 200 mln zł w 2016 r. </br></br>
 
                                                            </h5>
                                                       </div>
@@ -823,6 +825,7 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
                                           </div>
                                       </div>
                             </div>
+                          </div>
 
     <!-- </div> -->
                         <!-- </div>
@@ -1315,7 +1318,7 @@ new Chart(document.getElementById("polar-chart"), {
       datasets: [
         {
           label: "",
-          backgroundColor: ["rgb(222, 233, 252,.5)", "rgb(99, 149, 242)","rgb(18, 88, 220)","rgb(10, 51, 127)","rgb(9, 24, 52)","rgba(11, 30, 65,.5)"],
+          backgroundColor: ["rgba(222, 233, 252,.5)", "rgb(99, 149, 242)","rgb(18, 88, 220)","rgb(10, 51, 127)","rgb(9, 24, 52)","rgba(11, 30, 65,.5)"],
           data: ['10.2','10.3','14','14.6','16.8','31.8']
         }
       ]
