--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
 
                                 <div class="icon icon-danger">
                                   <!-- <img src='./assets/img/generic.png'> -->
-                                  <img src='./assets/icons/kola.png'>
+                                  <img src='./assets/icons/kolka.png'>
 
                                     <!-- <i class="material-icons">fingerprint</i> -->
                                 </div>
